# projeto/app.js
@@ -4,19 +4,21 @@ var app = express();
 var mysql = require('mysql');   
 var connection = mysql.createConnection({
     host: "localhost",
-    user: 'tecweb',
-    password: "tecweb",
+    user: 'root',
+    password: "",
+    port: 3306,
     database: "dbtecweb"
 });
 
 
 app.use(express.json());
 
-app.post('/consulta', (req, res) => {
+app.post('/consulta', (req, resp) => {
  var consultas = req.body;
  console.log("POST CONSULTA ");
 
  connection.query("INSERT INTO consulta SET ?",[consultas],(err, result) => {
+     
      if(err){
          console.log(err);
          resp.status(500).end();
@@ -28,11 +30,11 @@ app.post('/consulta', (req, res) => {
 
 }); 
 
-app.get('/consulta/:consultaid',(req, res) => {
+app.get('/consulta/:consultaid',(req, resp) => {
     var consultaid = req.params.consultaid;
     console.log(" Get: Consultaid "+consultaid);
 
-    connection.query("SELECT * FROM consulta WHERE id = ?", [consultaid],(err, result) => {
+    connection.query("SELECT * FROM consulta WHERE consultaid = ?", [consultaid],(err, result) => {
         if(err){
             console.log(err);
             resp.status(500).end();
@@ -43,11 +45,11 @@ app.get('/consulta/:consultaid',(req, res) => {
     });
 });
 
-app.put('/consulta/:consultaid',(req, res) => {
+app.put('/consulta/:consultaid',(req, resp) => {
     var consultaid = req.params.consultaid;
     var consulta = req.body;
     console.log(" Put: Consultaid "+consultaid);
-    connection.query("UPDATE consulta SET ? WHERE id = ?", [consulta,consultaid],(err, result) => {
+    connection.query("UPDATE consulta SET ? WHERE consultaid = ?", [consulta,consultaid],(err, result) => {
         if(err){
             console.log(err);
             resp.status(500).end();
@@ -60,11 +62,11 @@ app.put('/consulta/:consultaid',(req, res) => {
 
    })
 
-   app.get('/consulta/:consultaidusuario/',(req, res) => {
-    var consultaidusuario = req.params.consultaidusuario;
-    console.log(" GET: Consultaidusuario "+consultaidusuario);
+   app.get('/consulta/consultausername/:consultausername/',(req, resp) => {
+    var consultausername = req.params.consultausername;
+    console.log(" GET: Consultaidusuario "+consultausername);
 
-    connection.query("SELECT * FROM consulta WHERE id = ?", [consultaidusuario],(err, result) => {
+    connection.query("SELECT * FROM consulta WHERE consultausername = ?", [consultausername],(err, result) => {
         if(err){
             console.log(err);
             resp.status(500).end();
@@ -75,10 +77,10 @@ app.put('/consulta/:consultaid',(req, res) => {
     });
    })
 
-app.delete('/consulta/:consultaid',(req, res) => {
+app.delete('/consulta/:consultaid',(req, resp) => {
     var consultaid = req.params.consultaid;
     console.log(" Delete: Consultaid "+consultaid);
-    connection.query("DELETE FROM consulta WHERE id = ?", [consultaid],(err, result) => {
+    connection.query("DELETE FROM consulta WHERE consultaid = ?", [consultaid],(err, result) => {
         if(err){
             console.log(err);
             resp.status(500).end();
@@ -93,7 +95,7 @@ app.delete('/consulta/:consultaid',(req, res) => {
 }) 
 
 
-app.post('/user', (req, res) => {
+app.post('/user', (req, resp) => {
     var user = req.body;
     console.log(JSON.stringify(user));
     connection.query("INSERT INTO consulta SET ?",[user],(err, result) => {
@@ -110,10 +112,10 @@ app.post('/user', (req, res) => {
 
 
 
-app.get('/user/:username',(req, res) => {
+app.get('/user/:username',(req, resp) => {
     var username = req.params.username;
     console.log(" Get: Username "+username);
-    connection.query("SELECT * FROM consulta WHERE id = ?", [username],(err, result) => {
+    connection.query("SELECT * FROM consulta WHERE username = ?", [username],(err, result) => {
         if(err){
             console.log(err);
             resp.status(500).end();
@@ -124,12 +126,12 @@ app.get('/user/:username',(req, res) => {
     });
 })
    
-app.put('/user/:username',(req, res) => {
+app.put('/user/:username',(req, resp) => {
     var username = req.params.username;
     var user = req.body;
     console.log(" Put: Username "+username);
 
-    connection.query("UPDATE consulta SET ? WHERE id = ?", [user,username],(err, result) => {
+    connection.query("UPDATE consulta SET ? WHERE username = ?", [user,username],(err, result) => {
         if(err){
             console.log(err);
             resp.status(500).end();
@@ -141,10 +143,10 @@ app.put('/user/:username',(req, res) => {
 
    })
 
-app.delete('/consulta/:username',(req, res) => {
+app.delete('/consulta/:username',(req, resp) => {
     var username = req.params.username;
     console.log(" Delete: Username "+username);
-    connection.query("DELETE FROM consulta WHERE id = ?", [username],(err, result) => {
+    connection.query("DELETE FROM consulta WHERE username = ?", [username],(err, result) => {
         if(err){
             console.log(err);
             resp.status(500).end();
